# Rust-karaoke

./: .gitignore  README.md  package.json
Dock/: plan.md  plan2.md  plan3.md
scripts/: convert_bsroformer.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: pipeline_test.rs
src-tauri/src/: lib.rs  main.rs  scoring.rs  state.rs  types.rs
src-tauri/src/audio/: microphone.rs  mod.rs  playback.rs
src-tauri/src/inference/: bsroformer.rs  fcpe.rs  mod.rs
src-tauri/src/pipeline/: decode.rs  download.rs  mod.rs  pitch.rs  separation.rs
ui/: index.html
ui/assets/: app.js  style.css
