[package]
name = "rust-karaoke"
version = "0.1.0"
edition = "2021"
description = "AI-powered karaoke scoring system with ONNX Runtime"
authors = ["Rust-Karaoke"]

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ONNX Runtime for AI inference (BS-RoFormer, FCPE)
ort = { version = "2.0.0-rc.11", features = ["cuda", "ndarray"] }
ndarray = "0.16"
once_cell = "1"

# Audio I/O
cpal = "0.15"
rodio = { version = "0.19", default-features = false, features = ["symphonia-all"] }
symphonia = { version = "0.5", features = ["all"] }

# Lock-free concurrency
ringbuf = "0.4"
crossbeam-channel = "0.5"

# YouTube download
rusty_ytdl = { version = "0.7", features = ["default"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
hound = "3.5"
bytemuck = { version = "1", features = ["derive"] }
rustfft = "6"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
